<resources>
    <string name="app_name">MyStory</string>
    <string name="tagline">Memorize Your Life</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_login_page">Start your story</string>
    <string name="message_login_page">Let\'s create some stories together</string>
    <string name="title_register_page">Let\'s Join Us</string>
    <string name="message_register_page">Create your account to explore new journey</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="valid_email">Must a valid email</string>
    <string name="password_char">Password must contain min 8 characters</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="enter_name">Enter your name</string>
    <string name="success_register">Registration successful. Please login.</string>
    <string name="error_empty_fields">Please fill in all fields.</string>
    <string name="title_welcome_page">Create your own story</string>
    <string name="message_welcome_page"><![CDATA[>500 million people has joined us]]></string>
    <string name="logout">Logout</string>
    <string name="logout_succes">Logout from your account</string>
    <string name="btnAdd">Add story</string>
    <string name="photo_story">Photo Story</string>
    <string name="error_fetching_stories">Failed to fetch stories. Please try again.</string>
    <string name="story_photo">Story Photo</string>
    <string name="cameraChoose">Camera</string>
    <string name="galleryChoose">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload Your Story</string>
    <string name="success_upload">Story uploaded successfully</string>
    <string name="error_upload">Failed to upload story. Please try again</string>
    <string name="permission_granted">Permissions granted successfully.</string>
    <string name="permission_denied">Permissions denied. Camera won\'t work</string>
    <string name="detail_title">Detail Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_title">Maps</string>
    <string name="maps">Maps</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="location_not_found">Location not found.Please try again later.</string>
    <string name="error_location_client_not_initialized">Location request not initialized</string>
    <string name="location_format">Location: Latitude: %.4f, Longitude: %.4f</string>
    <string name="location_not_available">Location Not Available</string>
    <string name="error_missing_token">Token not valid</string>
    <string name="retry">Retry again</string>
    <string name="error_login_required">Login Required</string>
    <string name="error_loading_stories">Error loading stories</string>
</resources>